Tilsynelatende starter faktisk minecraft. Lagt til Create og Log